# rwkv.cog

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README_OPENCOG.md  cmake_install.cmake  rwkv.h  rwkv_opencog.cpp  rwkv_opencog.h
Testing/Temporary/: CTestCostData.txt
examples/: CMakeLists.txt  cognitive_reasoning_demo.c
extras/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_opencog_integration.c
